# CMakeProject_AISD

./: CMakeLists.txt
CMakeProject_AISD/: CMakeLists.txt  CMakeProject_AISD.cpp  CMakeProject_AISD.h  console.cpp
